fixed mobile overflow issues

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@
 }
 
 body {
-  overflow-x: hidden;
   background-image: url(./assets/images/background-mobile.png);
   background-size: 100%;
   background-position: center;
@@ -40,6 +39,7 @@ body {
   align-items: center;
   padding: 15px;
   min-height: 100vh;
+  max-width: 100vw;
 }
 
 .pattern-lines,
@@ -48,9 +48,18 @@ body {
 }
 
 .pattern-lines {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  transform: scale(3);
+  transform-origin: center center;
+}
+
+.squiggly-top {
+  position: absolute;
+  height: 10%;
+  right: 0;
 }
 
 .circle-pattern {
@@ -62,12 +71,11 @@ body {
 
 .squiggly {
   position: absolute;
-  width: 100%;
-  bottom: 0;
-  left: 0;
+  width: 75%;
+  bottom: -26%;
   z-index: -1;
+  left: 0;
 }
-
 header h1 {
   font-weight: 900;
   text-align: center;
@@ -216,13 +224,6 @@ form input {
   border-radius: 10px;
 }
 */
-.squiggly {
-  position: absolute;
-  width: 75%;
-  bottom: -25.9%;
-  z-index: -1;
-  left: 0;
-}
 
 #name-error,
 #github-error,
